# weaver

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  cert.pem  deny.toml  key.pem  key.pub
.config/: nextest.toml
.github/workflows/: build-pipeline.yml  build.yml  create-release-branch.yml  create-release.yml  pull-request.yml
crates/distro-db-core/: Cargo.toml
crates/distro-db-core/src/: data.rs  db.rs  dead_simple_engine.rs  dynamic_table.rs  error.rs  in_memory.rs  in_memory_table.rs  key.rs  lib.rs  rows.rs  storage_engine.rs  table_schema.rs  tx.rs
crates/distro-db-core/src/db/: start_db.rs  start_server.rs
crates/distro-db-core/tests/: create_in_memory.rs  shard_connections.rs  start_database.rs
crates/weaver-ast/: Cargo.toml
crates/weaver-ast/src/: ast.rs  error.rs  lexing.rs  lib.rs  parsing.rs  span.rs  tokens.rs  weaver_query.lalrpop
crates/weaver-ast/src/ast/: create.rs  data_type.rs  expr.rs  from.rs  identifier.rs  literal.rs  load.rs  select.rs  visitor.rs
crates/weaver-ast/src/lexing/: parsers.rs  token.rs
crates/weaver-ast/src/lexing/parsers/: strings.rs  utility.rs
crates/weaver-ast/src/tokens/: parsers.rs  token.rs
crates/weaver-ast/src/tokens/parsers/: strings.rs  utility.rs
crates/weaver-auth/: Cargo.toml
crates/weaver-auth/src/: lib.rs
crates/weaver-auth/src/access_control/: users.rs
crates/weaver-client/: Cargo.toml
crates/weaver-client/src/: lib.rs  write_rows.rs
crates/weaver-core/: Cargo.toml
crates/weaver-core/benches/: btree_benchmarks.rs  devices_benchmarks.rs
crates/weaver-core/keys/: cert.pem  key.pem  key.pub
crates/weaver-core/src/: access_control.rs  cancellable_task.rs  cnxn.rs  common.rs  conversion.rs  data.rs  db.rs  dead_simple_engine.rs  dynamic_table.rs  dynamic_table_factory.rs  error.rs  in_memory_table.rs  key.rs  lib.rs  modules.rs  monitoring.rs  plugins.rs  queries.rs  rows.rs  sentinel.rs  storage.rs  table_schema.rs  tables.rs  tx.rs
crates/weaver-core/src/access_control/: auth.rs  users.rs
crates/weaver-core/src/access_control/auth/: context.rs  error.rs  init.rs  secured.rs
crates/weaver-core/src/cnxn/: cnxn_loop.rs  handshake.rs  interprocess.rs  stream.rs  tcp.rs  transport.rs
crates/weaver-core/src/common/: batched.rs  consistent_hasher.rs  dual_result.rs  hex_dump.rs  iter_ext.rs  linked_list.rs  opaque.rs  pretty_bytes.rs  ram_file.rs  read_only.rs  stream_support.rs  track_dirty.rs  window.rs
crates/weaver-core/src/data/: charset.rs  row.rs  serde.rs  types.rs  values.rs
crates/weaver-core/src/db/: concurrency.rs  core.rs  server.rs  start_db.rs  start_server.rs
crates/weaver-core/src/db/concurrency/: init_system_tables.rs  processes.rs
crates/weaver-core/src/db/core/: bootstrap.rs  fs.rs
crates/weaver-core/src/db/server/: before_ready.rs  bootstrap.rs  cnxn.rs  init.rs  init_system_tables.rs  layers.rs  lifecycle.rs  processes.rs  socket.rs  weaver_db_server.rs
crates/weaver-core/src/db/server/before_ready/: load_tables.rs
crates/weaver-core/src/db/server/bootstrap/: weaver.rs
crates/weaver-core/src/db/server/cnxn/: cnxn_loop.rs  handshake.rs  interprocess.rs  stream.rs  tcp.rs  transport.rs
crates/weaver-core/src/db/server/init/: engines.rs  system.rs  weaver.rs
crates/weaver-core/src/db/server/layers/: layer_impl.rs  packets.rs  service.rs
crates/weaver-core/src/queries/: ast.rs  execution.rs  executor.rs  query_cost.rs  query_plan.rs  query_plan_factory.rs  query_plan_optimizer.rs
crates/weaver-core/src/queries/execution/: evaluation.rs  executor.rs  strategies.rs
crates/weaver-core/src/queries/execution/evaluation/: builtins.rs  functions.rs
crates/weaver-core/src/queries/execution/executor/: expr_executor.rs
crates/weaver-core/src/queries/execution/strategies/: join.rs
crates/weaver-core/src/storage/: abstraction.rs  b_plus_tree.rs  b_plus_tree_2.rs  b_tree.rs  cells.rs  devices.rs  encrypted_pager.rs  engine.rs  file_pager.rs  indexed_file_page.rs  paging.rs  ram_file.rs  slotted_page.rs  slotted_page_2.rs  slotted_pager.rs  virtual_pager.rs
crates/weaver-core/src/storage/b_plus_tree/: red_black_tree.rs
crates/weaver-core/src/storage/devices/: mmap_file.rs  ram_file.rs
crates/weaver-core/src/storage/engine/: in_memory.rs  weave_bptf.rs
crates/weaver-core/src/storage/paging/: buffered_pager.rs  caching_pager.rs  file_pager.rs  slotted_pager.rs  traits.rs  virtual_pager.rs
crates/weaver-core/src/storage/tables/: bpt_file_table.rs  in_memory_table.rs  lss_table.rs  shared_table.rs  system_tables.rs  table_schema.rs  unbuffered_table.rs
crates/weaver-core/src/tables/: bpt_file_table.rs  file_table.rs  in_memory_table.rs  shared_table.rs  system_tables.rs  table_schema.rs  unbuffered_table.rs
crates/weaver-core/src/tx/: behavior.rs  coordinator.rs
crates/weaver-core/tests/: b_plus_tree_tests.rs  bind_to_tcp.rs  connect_over_tcp.rs  create_in_memory.rs  shard_connections.rs  start_database.rs  transactions_in_memory.rs
crates/weaver-core/weaver/: cost
crates/weaver-cryptography/: Cargo.toml
crates/weaver-cryptography/src/: chacha20poly1305.rs  lib.rs  rsa.rs
crates/weaver-daemon/: Cargo.toml
crates/weaver-daemon/src/: cli.rs  lib.rs  main.rs
crates/weaver-daemon/tests/: startup.rs
crates/weaver-tests/: Cargo.toml  cert.pem  key.pem  key.pub
crates/weaver-tests/data/: 1krc.csv
crates/weaver-tests/examples/: 1brc.rs
crates/weaver-tests/src/: lib.rs
crates/weaver-tests/tests/: 1brc.rs  connect_tcp.rs  create_tables.rs  query_weaver_tables.rs  reconnect.rs  secured-client-connection.rs
keys/: cert.pem  key.pem  key.pub
weaver/weaver/: cost  schemata  tables
~/.weaver/: history
