[package]
name = "distro-db-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
log = "0.4.20"
serde_json = "1.0.108"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
threadpool-crossbeam-channel = "1.8.0"
parking_lot = "0.12.1"
