[package]
name = "weaver-ast"
version.workspace = true
authors.workspace =true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.51"