[package]
name = "weaver-ast"
version.workspace = true
authors.workspace =true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
nom = "7.1.3"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.51"
