[package]
name = "weaver-ast"
description = "Provides the AST and parsing for weaver queries"
version.workspace = true
authors.workspace =true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
nom = "7.1.3"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.51"
lalrpop-util = "0.20.0"
paste = "1.0.14"

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
serde_json = "1.0.113"
rand = "0.8.5"