[package]
name = "weaver-client"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "weaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weaver-core = { version = "0.0.0", path = "../weaver-core", features = ["log"] }
clap = { version = "4.4.11", features=["derive"] }
log = "0.4.20"
eyre = "0.6.10"
simplelog = "0.12.1"
prettytable = "0.10.0"
color-eyre = "0.6.2"
interprocess = "1.2.1"