[package]
name = "weaver-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# provides log events instead of just trace events
log = ["tracing/log"]
# Vendor ssl instead of dynamically linking
vendor-openssl = ["openssl/vendored"]
transport-sniffing = []

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tracing = { version = "0.1.40" }
serde_json = "1.0.108"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
threadpool-crossbeam-channel = "1.8.0"
parking_lot = "0.12.1"
rand = "0.8.5"
digest = "0.10.7"
sha2 = "0.10.8"
either = "1.9.0"
openssl = "0.10.61"
tempfile = "3.8.1"
interprocess = "1.2.1"
argon2 = { version = "0.5.2" }
whoami = "1.4.1"
zeroize = { version = "1.7.0", features = ["serde"] }
cfg-if = "1.0.0"
derive_more = "0.99.17"
bitfield = "0.14.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
