[package]
name = "weaver-core"
version.workspace = true
authors.workspace =true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Vendor ssl instead of dynamically linking
vendor-openssl = ["openssl/vendored"]
weaveBPTF-caching = []
transport-sniffing = []
mmap = ["memmap2"]

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tracing = { version = "0.1.40" }
serde_json = "1.0.108"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rand = "0.8.5"
digest = "0.10.7"
sha2 = "0.10.8"
either = "1.9.0"
openssl = "0.10.61"
tempfile = "3.8.1"
interprocess = "1.2.1"
argon2 = { version = "0.5.2" }
whoami = "1.4.1"
zeroize = { version = "1.7.0", features = ["serde"] }
cfg-if = "1.0.0"
derive_more = "0.99.17"
bitfield = "0.14.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
nom = "7.1.3"
fs2 = "0.4.3"
weaver-ast = { version = "0.0.0", path = "../weaver-ast" }
ptree = { version = "0.4.0", default-features = false }
rayon = "1.8.1"
lru = "0.12.2"
md5 = "0.7.0"
indexmap = "2.2.3"
static_assertions = "1.1.0"
memmap2 = { version = "0.9.4", optional = true }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
paste = "1.0.14"
csv = "1.3.0"
itertools = "0.12.1"
strum = { version = "0.26.2", features = ["derive"] }


[dev-dependencies]
tracing-subscriber = "0.3.18"
criterion = { version = "0.5", features = ["html_reports"] }
test-log = { version = "0.2.15", features = ["trace"] }

[[bench]]
name = "btree_benchmarks"
harness = false

[[bench]]
name = "devices_benchmarks"
harness = false
