[package]
name = "weaver-cryptography"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chacha20poly1305", "rsa"]

[dependencies]
aead = { version = "0.5.2"}
once_cell = "1.19.0"
thiserror = "1.0.57"
rand = "0.8.5"
pkcs8 = "0.10.2"
cfg-if = "1.0.0"
num-bigint-dig = "0.8.4"

chacha20poly1305 = { version = "0.10.1", optional = true }
rsa = { version = "0.9.6", features = ["pkcs5"], optional = true }

[profile.dev]
opt-level = 3
