[package]
name = "weaver-daemon"
version = "0.0.0"
edition = "2021"
description = "Responsible for running the weaver database. Should not shut down for any reason"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weaverd"
path = "./src/main.rs"

[dependencies]
weaver-core = { version = "0.0.0", path = "../weaver-core" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.4.11", features = ["derive"] }