[package]
name = "weaver-daemon"
description = "Responsible for running the weaver database. Should not shut down for any reason"
version.workspace = true
authors.workspace =true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendor-openssl = ["weaver-core/vendor-openssl"]

[[bin]]
name = "weaverd"
path = "./src/main.rs"

[dependencies]
weaver-core = { version = "0.0.0", path = "../weaver-core" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.4.11", features = ["derive"] }
num_cpus = "1.16.0"
interprocess = "1.2.1"