[package]
name = "weaver-tests"
version = "0.0.0"
edition = "2021"
publish = false
description = "this crate is just for testing purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weaver-client = { version = "*", path = "../weaver-client" }
weaver-core = { version = "*", path = "../weaver-core", features = ["transport-sniffing"] }
crossbeam = "0.8"
eyre = "0.6.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
weaver-daemon = { version = "0.0.0", path = "../weaver-daemon" }
tempfile = "3.8.1"

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"] }

